--- a/config/database.yml
+++ b/config/database.yml
@@ -27,6 +27,8 @@
 development:
   adapter: postgresql
   database: think_development
+  username: lasernite
+  password:
   pool: 5
   timeout: 5000
 
